fix top sticky on safari

--- a/_sass/gallery.scss
+++ b/_sass/gallery.scss
@@ -32,7 +32,7 @@
     line-height: 1.7;
 
     position: sticky;
-    top: 20px;
+    top: 50px;
 }
 
 .image-desc > p {
